gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22570.d
version https://git-lfs.github.com/spec/v1
oid sha256:335611060a9462c8e5ba4ec8d9a90bcff2e54a4d4c7f1652949c92bf6cea1d89
size 358
